; ModuleID = '/home/carl/AnghaBench/nanomsg/src/transports/utils/extr_backoff.c_nn_backoff_start.c'
source_filename = "/home/carl/AnghaBench/nanomsg/src/transports/utils/extr_backoff.c_nn_backoff_start.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nn_backoff = type { i32, i32, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @nn_backoff_start(%struct.nn_backoff* %0) #0 {
  %2 = alloca %struct.nn_backoff*, align 8
  %3 = alloca i32, align 4
  store %struct.nn_backoff* %0, %struct.nn_backoff** %2, align 8
  %4 = load %struct.nn_backoff*, %struct.nn_backoff** %2, align 8
  %5 = getelementptr inbounds %struct.nn_backoff, %struct.nn_backoff* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = sub nsw i32 %6, 1
  %8 = load %struct.nn_backoff*, %struct.nn_backoff** %2, align 8
  %9 = getelementptr inbounds %struct.nn_backoff, %struct.nn_backoff* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = mul nsw i32 %7, %10
  store i32 %11, i32* %3, align 4
  %12 = load i32, i32* %3, align 4
  %13 = load %struct.nn_backoff*, %struct.nn_backoff** %2, align 8
  %14 = getelementptr inbounds %struct.nn_backoff, %struct.nn_backoff* %13, i32 0, i32 2
  %15 = load i32, i32* %14, align 4
  %16 = icmp sgt i32 %12, %15
  br i1 %16, label %17, label %21

17:                                               ; preds = %1
  %18 = load %struct.nn_backoff*, %struct.nn_backoff** %2, align 8
  %19 = getelementptr inbounds %struct.nn_backoff, %struct.nn_backoff* %18, i32 0, i32 2
  %20 = load i32, i32* %19, align 4
  store i32 %20, i32* %3, align 4
  br label %26

21:                                               ; preds = %1
  %22 = load %struct.nn_backoff*, %struct.nn_backoff** %2, align 8
  %23 = getelementptr inbounds %struct.nn_backoff, %struct.nn_backoff* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = mul nsw i32 %24, 2
  store i32 %25, i32* %23, align 4
  br label %26

26:                                               ; preds = %21, %17
  %27 = load %struct.nn_backoff*, %struct.nn_backoff** %2, align 8
  %28 = getelementptr inbounds %struct.nn_backoff, %struct.nn_backoff* %27, i32 0, i32 3
  %29 = load i32, i32* %3, align 4
  %30 = call i32 @nn_timer_start(i32* %28, i32 %29)
  ret void
}

declare dso_local i32 @nn_timer_start(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
